Fixed following points from customer response - Shown user badge on user profile edit page. - Added evidence page link behind badge title on user edit page. - Embed code is added on share box. - Default Email subject and body text is added.

--- a/css/admin.css
+++ b/css/admin.css
@@ -239,7 +239,9 @@ Shortcode Embed styles
 	overflow: auto;
 	border-top: 1px solid;
   }
-  
+  .badgeos-share-card{
+	width: 100% !important;
+  }
   @media screen and (max-width: 700px){
 	.box{
 	  width: 70%;
